[package]
name = "rs-sqlite-ecs"
version = "0.1.0"
authors = ["Rasmus Vermeulen <rasmus_vermeulen@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.24.2", features = ["bundled"] }
fps_clock = "2.0.0"
