[package]
name = "rs-sqlite-ecs"
version = "0.1.0"
authors = ["Rasmus Vermeulen <rasmus_vermeulen@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.6", features = ["sqlite"] }
fps_clock = "2.0.0"
anyhow = "1.0.40"
impls = "1.0.3"
dotenv = "*"